"Fixed visual spacing for landing page - still working on logic for books"

--- a/styles.css
+++ b/styles.css
@@ -26,10 +26,15 @@ body {
     background-image: linear-gradient(to right, #FF00FF, #7FFFD4);
     justify-content: center;
     align-items: center;
+    padding: 2rem 0;
 
     >h1 {
         font-size: var(--font-size-header);
     }
+}
+
+.body-container > div {
+    padding: 0.7rem 0;
 }
 
 #anchor-to-library {
@@ -41,10 +46,10 @@ body {
 }
 
 #anchor-to-library:hover {
-    transform: translateY(2px);
     background-color: rgb(199, 196, 196);
 }
 
 #anchor-to-library:active {
+    transform: translateY(1px);
     background-color: rgb(160, 159, 159);
 }
